# soenlis-ryh2025

./: .gitignore  LICENSE  README.md  app.py  audit.py  console_ui.py  coral_agent_base.py  cve_agent.py  index.html  install.sh  main.py  orchestrator.py  pyproject.toml  recon_agent.py  requirements.txt  run_agent.sh  soenlis_tools.py  test_groq.py
agents/: __init__.py  orchestrator.py
