[project]
name = "coral-interface-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-experimental==0.3.4",
    "langchain-groq==0.3.4",
    "langchain-mcp-adapters==0.1.7",
    "langchain-openai==0.3.26",
    "pandas==2.3.0",
    "tabulate>=0.9.0",
    "uv>=0.7.17",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "python-wappalyzer (>=0.3.1,<0.4.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "requests (>=2.32.4,<3.0.0)",
]
